# voice-sales-agent-shopify

./: .gitignore  CLEAN_CODE_REVIEW.md  Dockerfile  PR_SUMMARY.md  README.md
CLEAN_CODE_GUIDE/: README.md  TESTING_STYLE_GUIDE.md  anti-patterns.md  api-design-patterns.md  database-patterns.md  decision-frameworks.md  directory-organization.md  feature-flags.md  frontend-architecture.md  frontend-e2e-testing.md  integration-patterns.md  reactflow-patterns.md  service-architecture.md  third-party-integration-workflow.md
backend/: .env.example  REFACTOR_NOTES.md  debug_search.py  pyproject.toml  requirements.txt  test_websocket.html
backend/src/: app.py  config.py  main.py
backend/src/archive/tests/: test_cartesia_tts.py
backend/src/domains/: __init__.py
backend/src/domains/shopify/: __init__.py  client.py  products.py  routes.py  types.py
backend/src/domains/shopify/services/: carts.py  inventory.py  products.py
backend/src/domains/voice/: __init__.py  pipeline.py  routes.py
backend/src/domains/voice/agent/: optimized_agent.py
backend/src/domains/voice/tools/: registry.py
backend/src/infrastructure/api/: __init__.py  app.py  routes.py
backend/src/infrastructure/config/: settings.py
backend/src/infrastructure/livekit/: __init__.py  agent.py
backend/src/infrastructure/tts/: cartesia_service.py
backend/src/integrations/retell/: client.py
backend/src/integrations/shopify/: client.py
backend/src/orchestration/: __init__.py
backend/src/orchestration/agent/: __init__.py  fast_agent.py  graph.py  optimized_agent.py  prompts.py
backend/src/orchestration/tools/: __init__.py  base.py  product_tools.py  registry.py
backend/src/shared/: __init__.py  exceptions.py  logging.py  types.py  utils.py
backend/tests/integration/shopify/: test_real_api.py
backend/tests/unit/: test_agent.py  test_audio_pipeline.py  test_latency_optimization.py  test_multiturn_conversation.py  test_tools.py  test_tts_interruption.py  test_websocket_interruption.py
docs/: OPTIMIZATION_RESULTS.md  agent-behavior.md  api.md  (+3 more)
(+9 files in other folders)
